# Project_1

./: .gitignore  README.md  pyproject.toml
src/hallved_fashion_deals/: __init__.py  scraper.py  streamlit_app.py
src/hallved_fashion_deals.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
